# writer_cc

./: .gitignore  QUERIES.md  README.md  pyproject.toml  ✍️ 写作范本库.md  文章质量库.base  🏆 文章质量仪表盘.md  📖 深度技术文章库.md
.claude/: CLAUDE.md
05-System/: 仪表盘.md
05-System/MOCs/: MOC-产品.md  MOC-技术.md
05-System/Templates/: MOC模板.md  文章模板.md  每日笔记模板.md  读书笔记模板.md  项目索引模板.md
05-System/analyses/: ANALYSIS_TEMPLATE.md  log.md
05-System/wiki/: index.md  log.md
docs/: PIPELINE_IMPROVEMENTS.md  imitation_prompt_cheatsheet.md  imitation_workflow_example.md  personal_writing_library_guide.md  vault_setup.md  writing_imitation_workflow.md
examples/: 示例文章.md
raw/articles/: 21 产品经理做用户画像的五大核心误区，避免了少走弯路.md  AI 发展太快跟不上？一张四象限图帮你做减法.md  Agent Harness 综述：同一个模型，为什么做出来的 Agent 差这么远.md  Async Python’s Determinism Builds Reliable AI Futures - insighthub47.com_1.md  Building effective agents.md  Claude Code 完全使用综合指南.md  Claude Pitfalls Database Indexes  Lincoln Loop.md  Cutting Python Web App Memory Over 31%.md  Do You Even Need a Database - DB Pro Blog.md  Everyone Is Talking About AI Agents. Most People Have No Idea How to Build One..md  Harness Engineering：生产级 AI Agent Runtime 的架构与设计原则.md  How Fast Are Python Type Checkers Performance Benchmarks for Large Codebases (20.md  How to Monitor Celery Task Retries and Failures with OpenTelemetry Spans.md  Kubernetes 配置管理技术选型与云原生实践指南.md  Kubernetes配置管理技术选型与云原生实践指南 - Doubao.md  LLM Wiki.md  Python gets a new governance model.md  Python introducing profiling-explorer.md  Scaling a Monolith to 1M LOC 113 Pragmatic Lessons from Tech Lead to CTO.md  (+11 more)
(+234 files in other folders)
